<resources>

    <string name="app_name">Sexton Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sexton Calculator</string>
    <string name="punch_button">Meal Punch</string>
    <string name="calorie_button">Meal Punch (Calorie Counter)</string>
    <string name="browse_button">Browse Food Selection</string>
    <string name="home_button">Home</string>
    <string name="reset_button">Reset</string>
    <string name="checkout_button">Checkout</string>
    <string name="random_button">Random</string>
    <string name="start_button">Start</string>
    <string name="maxCalories_textView">Max Calories:</string>
    <string name="totalCalories_textView">Total Calories:</string>
    <string name="totalRemaining_textView">Total Remaining:</string>
    <string name="amountRemaining_textView">$0.00</string>
    <string name="punchPay_button">Punch</string>
    <string name="cashPay_button">Cash ($)</string>
    <string name="flexPay_button">Flex ($)</string>
    <string name="punchValue_textView">1 Punch = $5.50</string>
    <string name="title_activity_home">Meal Options</string>
    <string name="totalPrice_textView">Total Price: $0.00</string>
    <string name="title_activity_punch">Meal Punch</string>
    <string name="title_activity_calorie">CalorieActivity</string>
    <string name="title_activity_browse">Browse Food Selection</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="home_text">Meal Options</string>
    <string name="entree_button">Entree</string>
    <string name="sides_button">Sides</string>
    <string name="back_button">Back</string>
    <string name="drinks_button">Drinks</string>
    <string name="punchTotal_editText">0</string>
    <string name="flexTotal_editText">0.00</string>
    <string name="cashTotal_editText">0.00</string>
    <string name="pressToContinue">Press To Continue</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_header">HeaderActivity</string>
    <string name="title_activity_pay_method">PayMethod</string>
    <string name="entrees">Entrees</string>
    <string name="sides">Sides</string>
    <string name="drinks">Drinks</string>
    <string name="foodItem">Food Item</string>
    <string name="price">Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="TextView">TextView</string>
    <string name="calorie">Calories</string>
    <string name="resetFlex_button">Reset Flex</string>
    <string name="resetCash_button">Reset Cash</string>
    <string name="decreasePunch_button">Decrease</string>

</resources>