<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/home_button" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_button" />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/checkout_button" />

    <TextView
        android:id="@+id/totalRemaining_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/totalRemaining_textView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/amountRemaining_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalRemaining_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/amountRemaining_textView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/punchPay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amountRemaining_textView"
        android:layout_marginTop="61dp"
        android:text="@string/punchPay_button" />

    <Button
        android:id="@+id/flexPay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/punchPay_button"
        android:layout_alignBottom="@+id/punchPay_button"
        android:layout_centerHorizontal="true"
        android:text="@string/flexPay_button" />

    <Button
        android:id="@+id/cashPay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/flexPay_button"
        android:layout_alignBottom="@+id/flexPay_button"
        android:layout_alignParentRight="true"
        android:text="@string/cashPay_button" />

    <EditText
        android:id="@+id/cashPay_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/home_button"
        android:layout_below="@+id/punchPay_button"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cashPay_editText"
        android:layout_alignBottom="@+id/cashPay_editText"
        android:layout_alignLeft="@+id/amountRemaining_textView"
        android:layout_alignRight="@+id/amountRemaining_textView"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cashPay_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/flexPay_button"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/punchValue_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/punchValue_textView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
