<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/itemIncrease_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="increaseQuantity"
        android:text="@string/plus" />

    <Button
        android:id="@+id/itemDecrease_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="46dp"
        android:layout_toLeftOf="@+id/itemIncrease_button"
        android:onClick="decreaseQuantity"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/itemQuantity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="17dp"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/itemIncrease_button"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/itemId_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/itemName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/dollarSign_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemDecrease_button"
        android:layout_alignParentLeft="true"
        android:text="$" />

    <TextView
        android:id="@+id/itemPrice_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dollarSign_textView"
        android:layout_alignBottom="@+id/dollarSign_textView"
        android:layout_toRightOf="@+id/dollarSign_textView"
        android:text="@string/TextView" />

</RelativeLayout>