<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0000">

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/home_button"
        android:onClick="homeActivity"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_button"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/checkout_button"
        android:onClick="checkoutActivity"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/random_button"
		android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/maxCalories_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/random_button"
        android:layout_alignBottom="@+id/random_button"
        android:layout_toRightOf="@+id/random_button"
        android:text="@string/maxCalories_textView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/maxCalories_textView"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/totalCalories_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/random_button"
        android:layout_centerHorizontal="true"
        android:text="@string/totalCalories_textView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SlidingDrawer
        android:id="@+id/slidingDrawer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="142.5dp"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:visibility="visible" >

        <Button
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dip"
            android:text="Entree" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </LinearLayout>
    </SlidingDrawer>
    
    <SlidingDrawer
        android:id="@+id/slidingDrawer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_button"
        android:layout_marginTop="42.5dp"
        android:layout_marginBottom="110dp"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dip"
            android:text="Sides" />

        <LinearLayout
            android:id="@+id/content2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </LinearLayout>
    </SlidingDrawer>
    
    <SlidingDrawer
        android:id="@+id/slidingDrawer3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_button"
        android:layout_marginTop="75.5dp"
        android:layout_marginBottom="77dp"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dip"
            android:text="Drinks" />

        <LinearLayout
            android:id="@+id/content3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>
